Fixed illegible text in class parameters

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -59,7 +59,7 @@ div.body h1, div.body h2, div.body h3, div.body h4, div.body h5, div.body h6 {
 div.sphinxsidebar h3, div.sphinxsidebar h4 {
     font-weight: 500;
 }
-
+.class > .sig-object .sig-param a.reference.internal,
 .class > .sig-object .sig-param a.reference.external {
     color: var(--fg);
     background-color: var(--flamingo);
